--- a/settings/project.json
+++ b/settings/project.json
@@ -6,12 +6,25 @@
   ],
   "excluded-modules": [
     "Collider",
+    "DragonBones",
+    "Graphics",
+    "Geom Utils",
+    "Mask",
+    "Mesh",
+    "MotionStreak",
+    "Native Socket",
     "Physics",
+    "PageView",
+    "PageViewIndicator",
+    "ProgressBar",
+    "RichText",
     "Slider",
     "ScrollBar",
     "ScrollView",
     "Spine Skeleton",
+    "TiledMap",
     "VideoPlayer",
+    "WebView",
     "3D",
     "3D Primitive",
     "3D Physics/cannon.js",
@@ -34,7 +47,7 @@
     "height": 640,
     "width": 960
   },
-  "last-module-event-record-time": 1625850259078,
+  "last-module-event-record-time": 1626537864141,
   "assets-sort-type": "name",
   "facebook": {
     "appID": "",
